--- a/generator.html
+++ b/generator.html
@@ -1630,7 +1630,7 @@
         while (bkstarNumber < 80) {
           var star = $("bkstar");
           var newStar = star.cloneNode(false);
-          var conatiner = $("backgroundStarContainer");
+          var container = $("backgroundStarContainer");
           newStar.id = star.id + "-" + bkstarNumber;
           container.appendChild(newStar);
           bkstarNumber++;
@@ -1956,4 +1956,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.406--->
+<!--Version 0.407--->
