--- a/generator.html
+++ b/generator.html
@@ -1524,6 +1524,7 @@
         },0800);
       }
       function hideSystem2() {
+        var system = $("system1"); //replace with variable of system element when read
         system.style.display = "none";
         system.style.opacity = "0%";
       }
@@ -1973,4 +1974,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.410--->
+<!--Version 0.411--->
