--- a/map.html
+++ b/map.html
@@ -32,17 +32,16 @@
           var newStar = star.cloneNode(false);
           var randomTop = Number(Math.floor(Math.random() * 740) + 61);
           var randomLeft = Number(Math.floor(Math.random() * 1265) + 36);
-          container.appendChild(newStar);
           newStar.id = star.id + Number(ministarCount + 1);
           newStar.style.display = "block";
-          newStar.style.top = newTop + "px";
-          newStar.style.left = newLeft + "px";
+          newStar.style.top = randomTop + "px";
+          newStar.style.left = randomLeft + "px";
+          container.appendChild(newStar);
           ministarCount++;
         }
         if (ministarCount = 60) {
           container.style.display = "block";
           console.log("all system stars have been accounted for");
-          return;
         }
       }
     
@@ -51,3 +50,4 @@
     </script>
   </body>
 </html>
+<!--Version 4--->
