--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
   <body>
   
     <div class="iconCloner">
-      <img class="ministar" id="ministar"></img>
+      <div class="ministar" id="ministar"></div>
     </div>
     
     <div class="ministarContainer" id="ministarContainer">
@@ -50,4 +50,4 @@
     </script>
   </body>
 </html>
-<!--Version 4--->
+<!--Version 5--->
