--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
           container.appendChild(newStar);
           ministarCount++;
         }
-        if (ministarCount = 60) {
+        if (ministarCount == 60) {
           container.style.display = "block";
           console.log("all system stars have been accounted for");
         }
@@ -50,4 +50,4 @@
     </script>
   </body>
 </html>
-<!--Version 5--->
+<!--Version 6--->
