--- a/map.html
+++ b/map.html
@@ -16,7 +16,7 @@
   <body>
   
     <div class="iconCloner">
-      <div class="ministar" id="ministar"></div>
+      <img class="ministar" id="ministar" src="redstar1.png"></img>
     </div>
     
     <div class="ministarContainer" id="ministarContainer">
@@ -50,4 +50,4 @@
     </script>
   </body>
 </html>
-<!--Version 7--->
+<!--Version 8--->
