--- a/map.html
+++ b/map.html
@@ -32,10 +32,13 @@
           var newStar = star.cloneNode(false);
           var randomTop = Number(Math.floor(Math.random() * 740) + 61);
           var randomLeft = Number(Math.floor(Math.random() * 1265) + 36);
+          var imgList = ["redstar1.png", "bluestar1.png", "orangestar1.png"];
+          var randomIndex = Number(Math.floor(Math.random() * 3) + 1);
           newStar.id = star.id + Number(ministarCount + 1);
           newStar.style.display = "block";
           newStar.style.top = randomTop + "px";
           newStar.style.left = randomLeft + "px";
+          newStar.src = imgList[randomIndex];
           container.appendChild(newStar);
           ministarCount++;
         }
@@ -50,4 +53,4 @@
     </script>
   </body>
 </html>
-<!--Version 8--->
+<!--Version 9--->
