--- a/map.html
+++ b/map.html
@@ -33,7 +33,7 @@
           var randomTop = Number(Math.floor(Math.random() * 740) + 61);
           var randomLeft = Number(Math.floor(Math.random() * 1265) + 36);
           var imgList = ["redstar1.png", "bluestar1.png", "orangestar1.png"];
-          var randomIndex = Number(Math.floor(Math.random() * 3) + 1);
+          var randomIndex = Number(Math.floor(Math.random() * 3));
           newStar.id = star.id + Number(ministarCount + 1);
           newStar.style.display = "block";
           newStar.style.top = randomTop + "px";
@@ -53,4 +53,4 @@
     </script>
   </body>
 </html>
-<!--Version 9--->
+<!--Version 10--->
