--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
         var container = document.getElementById("ministarContainer");
         while (ministarCount < 40) {
           var newStar = star.cloneNode(false);
-          var randomTop = Number(Math.floor(Math.random() * 740) + 61);
+          var randomTop = Number(Math.floor(Math.random() * 370 * 2) + 61);
           var randomLeft = Number(Math.floor(Math.random() * 1265) + 36);
           var imgList = ["redstar1.png", "bluestar1.png", "orangestar1.png"];
           var randomIndex = Number(Math.floor(Math.random() * 3));
@@ -53,4 +53,4 @@
     </script>
   </body>
 </html>
-<!--Version 11--->
+<!--Version 12--->
