--- a/map.html
+++ b/map.html
@@ -45,6 +45,9 @@
         if (ministarCount == 40) {
           container.style.display = "block";
           console.log("all system stars have been accounted for");
+          var mainStar = document.getElementById("ministar-1");
+          mainStar.style.padding = "2px";
+          mainStar.style.background = "lime";
         }
       }
       
@@ -61,4 +64,4 @@
     </script>
   </body>
 </html>
-<!--Version 17--->
+<!--Version 18--->
