--- a/generator.html
+++ b/generator.html
@@ -2012,8 +2012,9 @@
       generateStarbase();
       generateCurrency();
       generateBackgroundStarPlacement();
+      generateMinistars();
       bkstarGrowthLoop();
     </script>
   </body>
 </html>
-<!--Version 0.412--->
+<!--Version 0.413--->
