--- a/generator.html
+++ b/generator.html
@@ -1547,7 +1547,7 @@
         newSystem.style.display = "block";
         newSystem.style.opacity = "0%"
         setTimeout(function(){
-          showSystem2();
+          showSystem2(el);
         },0800);
       }
        function showSystem2(el) {
@@ -2030,4 +2030,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.414--->
+<!--Version 0.415--->
