--- a/generator.html
+++ b/generator.html
@@ -1545,7 +1545,7 @@
         var newSystem = $("system" + newSystemNumber);
         ministarContainer.style.opacity = "0%";
         newSystem.style.display = "block";
-        newSystem.style.opacity = "100%"
+        newSystem.style.opacity = "0%"
         setTimeout(function(){
           showSystem2(el);
         },0800);
@@ -1556,6 +1556,7 @@
          var newSystem = $("system" + newSystemNumber);
          ministarContainer.style.display = "none";
          ministarContainer.style.opacity = "100%";
+         newSystem.style.opacity = "100%";
        }
       
       //system generation
@@ -2029,4 +2030,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.416--->
+<!--Version 0.417--->
