--- a/generator.html
+++ b/generator.html
@@ -1740,8 +1740,18 @@
         if (ministarCount == 40) {
           console.log("all system stars have been accounted for");
           var mainStar = $("ministar-1");
+          var bigStar = $("s1");
           mainStar.style.padding = "2px";
           mainStar.style.background = "lime";
+          if (bigStar.src = "redstar1.png") {
+            mainStar.src = "redstar1.png";
+          }
+          if (bigStar.src = "bluestar1.png") {
+            mainStar.src = "bluestar1.png";
+          }
+          if (bigStar.src = "orangestar1.png") {
+            mainStar.src = "orangestar1.png";
+          }
         }
       }
       
@@ -2030,4 +2040,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.417--->
+<!--Version 0.418--->
