--- a/generator.html
+++ b/generator.html
@@ -3,6 +3,8 @@
     <title> 4x Random System Generator </title>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
   
     <style>
       body { background:#030a17; }
@@ -2040,4 +2042,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.420--->
+<!--Version 0.422--->
