--- a/generator.html
+++ b/generator.html
@@ -1562,6 +1562,8 @@
           var container = $("system1");
           var newPlanet = planet.cloneNode(false);
           newPlanet.id = planet.id + "-" + Number(planetNumber + 1);
+          newPlanet.classList.remove("planet");
+          newPlanet.classList.add("planet");
           container.appendChild(newPlanet);
           planetNumber++;
         }
@@ -2047,4 +2049,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.429--->
+<!--Version 0.430--->
