--- a/generator.html
+++ b/generator.html
@@ -1568,6 +1568,7 @@
         if (planetNumber == 6) {
           console.log("all system1 planets have been accounted for");
           planetElList = $$('.planet');
+          planet.parentNode.removeChild(planet);
         }
       }
       function generatePlanetStats() {
@@ -2048,4 +2049,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.432--->
+<!--Version 0.433--->
