--- a/generator.html
+++ b/generator.html
@@ -1568,7 +1568,8 @@
         if (planetNumber == 6) {
           console.log("all system1 planets have been accounted for");
           planetElList = $$('.planet');
-          planet.parentNode.removeChild(planet);
+          var oldPlanet = $("p");
+          oldPlanet.parentNode.removeChild(oldPlanet);
         }
       }
       function generatePlanetStats() {
@@ -2049,4 +2050,4 @@
     </script>
   </body>
 </html>
-<!--Version 0.435--->
+<!--Version 0.436--->
