--- a/test10.html
+++ b/test10.html
@@ -1578,22 +1578,25 @@
       function generatePlanets() {
         var systemNumber = 0;
         for (const syEl of systemElList) {
-          var planetNumber = 0;
-          while (planetNumber < 6) {
-            var planet = $("p");
-            var container = $("system" + Number(systemNumber + 1));
-            var newPlanet = planet.cloneNode(false);
-            newPlanet.id = planet.id + "-" + Number(planetNumber + 1);
-            container.appendChild(newPlanet);
-            planetNumber++;
+          while (systemNumber < 30) {
+            var planetNumber = 0;
+            while (planetNumber < 6) {
+              var planet = $("p");
+              var container = $("system" + Number(systemNumber + 1));
+              var newPlanet = planet.cloneNode(false);
+              newPlanet.id = planet.id + "-" + Number(planetNumber + 1);
+              container.appendChild(newPlanet);
+              planetNumber++;
+            }
+            systemNumber++;
           }
-          systemNumber++;
         }
         if (systemNumber == 30) {
           console.log("all system's all Planets have been accounted for");
           var oldPlanet = $("p");
           oldPlanet.parentNode.removeChild(oldPlanet);
           planetElList = $$('.planet');
+          return;
         }
       }
       function generatePlanetStats() {
@@ -2076,4 +2079,4 @@
     </script>
   </body>
 </html>
-<!--Version 6--->
+<!--Version 7--->
