--- a/test10.html
+++ b/test10.html
@@ -1658,7 +1658,7 @@
                                 ["587px","453px"]];
           var curPlanetIndex = 0;
           var numPlanets = Math.floor(Math.random() * 6) + 1;
-          var systemplanetElList = sysEl.querySelectorAll('.planet');
+          var systemplanetElList = syEl.querySelectorAll('.planet');
           for (const pEl of systemplanetElList) {
             var randomIndex = Math.floor(Math.random() * allPositions.length);
             var planetPosition = allPositions[randomIndex];
@@ -2075,4 +2075,4 @@
     </script>
   </body>
 </html>
-<!--Version 9--->
+<!--Version 10--->
