--- a/test10.html
+++ b/test10.html
@@ -2067,7 +2067,7 @@
       generatePlanets();
       generatePlanetStats();
       generateStarImg();
-      generateStarbase();
+      ///generateStarbase(); to be added in later
       generateCurrency();
       generateBackgroundStarPlacement();
       generateMinistars();
