--- a/test10.html
+++ b/test10.html
@@ -2080,6 +2080,7 @@
       generateSystems();
       generatePlanets();
       generatePlanetStats();
+      generateStars;
       generateStarImg();
       ///generateStarbase(); to be added in later
       generateCurrency();
@@ -2089,4 +2090,4 @@
     </script>
   </body>
 </html>
-<!--Version 12--->
+<!--Version 13--->
