--- a/test10.html
+++ b/test10.html
@@ -1687,7 +1687,7 @@
           }
         }
         if (systemNumber == 30) {
-          console.log("all system's all Stars have been accounted for");
+          console.log("all system's Stars have been accounted for");
           var oldStar = $("s");
           oldStar.parentNode.removeChild(oldStar);
           starElList = $$('.star');
@@ -2076,7 +2076,7 @@
       generateSystems();
       generatePlanets();
       generatePlanetStats();
-      generateStars;
+      generateStars();
       generateStarImg();
       ///generateStarbase(); to be added in later
       generateCurrency();
